[package]
name = "pcap-rs"
version = "1.0.1"
authors = ["Wilfried Chauveau <ithinuel@gmail.com>"]
description = "A parser for pcap files (and its file iterator)."
license = "MIT"
repository = "https://github.com/ithinuel/pcap-rs"
readme = "README.md"
#documentation = "http://rust.unhandledexpression.com/nom/"
keywords = ["parser", "parser-combinators", "parsing", "bit", "pcap"]
categories = ["parsing"]

include = [
  "LICENSE",
  ".gitignore",
  ".travis.yml",
  "Cargo.toml",
  "src/*.rs"
]

[dependencies]
nom = { version = "^4.0" }
